--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "3000:3000"
       - "8000:8000"
     env_file:
-      - .env.docker
+      - .env
     depends_on:
       db:
         condition: service_healthy
