Fix SECRET_KEY handling: Make optional with auto-generation

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}
 # Backend
 BACKEND_PORT=8000  # Changed from 8080 for consistency
 BACKEND_HOST=0.0.0.0
+SECRET_KEY= 
 
 # Frontend
 NEXT_PUBLIC_API_URL=http://backend:8000  # Updated port
